# jirahhh

./: .gitignore  .jira-config.example.yaml  CLAUDE.md  README.md  pyproject.toml
jirahhh/: __init__.py  __main__.py  cli.py  client.py  convert.py  issues.py
